--- a/styles/_medium.scss
+++ b/styles/_medium.scss
@@ -108,10 +108,94 @@
 }
 
 
+
+
+// HOME MAIN
 .blog-teasers {
   grid-template-columns: repeat(3, 1fr);
 }
 
+
+
+// CRUISE MAIN
+.cruises {
+  width: 95%;
+  display: flex;
+  flex-direction: column;
+  h1 {
+      font-family: $font;
+  }
+}
+.cruise-item {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 50px;
+  img {
+      width: 33%;
+      height: 100%;
+  }
+}
+.cruise-item-content {
+  width: 66%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 0;
+  margin-left: 20px;
+  h2, p, button {
+      font-family: $font;
+  }
+  h2 {
+      margin: 0;
+      margin-top: 0;
+  }
+}
+.btn-wrap {    
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  button {
+      width: 25%;
+  }
+}
+
+
+
+// AGENT MAIN
+.agent {
+  width: 95%;
+  display: flex;
+  flex-direction: column;
+  h1 {
+      font-family: $font;
+  }
+}
+.agent-content {
+  width: 100%;
+  display: block;
+  img {
+    float: right;
+    width: 50%;
+    height: 100%;
+    margin-left: 10px;
+    margin-bottom: 10px;
+  }
+  p {
+      font-family: $font;
+      clear: left;
+  }
+}
+
+
+
+
+// BOOK MAIN
+.book-form {
+  width: 50%;
+}
+
+
+// FOOTER
 .footer-info {
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, auto);
