--- a/styles/_small.scss
+++ b/styles/_small.scss
@@ -159,6 +159,10 @@ header {
     background: $darken;
 }
 
+
+
+
+// HOME MAIN
 main {
     width: 100vw;
     display: flex;
@@ -250,6 +254,134 @@ main {
     margin: 0;
 }
 
+
+
+
+// CRUISES MAIN
+.cruises {
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+    h1 {
+        font-family: $font;
+    }
+}
+.cruise-item {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    img {
+        width: 100%;
+        height: auto;
+    }
+}
+.cruise-item-content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 40px;
+    h2, p, button {
+        font-family: $font;
+    }
+    h2 {
+        margin: 0;
+        margin-top: 10px;
+    }
+}
+.btn-wrap {    
+    width: 100%;
+    button {
+        width: 100%;
+        height: 40px;
+        border: none;
+        border-radius: 4px;
+        background: $prime;
+        color: white;
+        cursor: pointer;
+        transition: ease-in-out 0.2s;
+        &:hover {
+            background: lighten($prime, 10%);
+        }
+    }
+}
+
+
+
+// AGENT MAIN
+.agent {
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+    h1 {
+        font-family: $font;
+    }
+}
+.agent-content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    img {
+        width: 100%;
+        height: 100%;
+    }
+    p {
+        font-family: $font;
+    }
+}
+
+
+
+
+// BOOK MAIN
+.book {
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+    h1 {
+        font-family: $font;
+    }
+}
+.book-form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    label {
+        display: flex;
+        flex-direction: column;
+        font-family: $font;
+        margin-top: 15px;
+        input {
+            width: 100%;
+            height: 40px;
+            margin-top: 5px;
+        }
+        select {
+            width: 100%;
+            height: 40px;
+            margin-top: 5px;
+        }
+    }
+}
+#book-form-submit {
+    width: 100%;
+    height: 40px;
+    margin-top: 25px;
+    background: $prime;
+    color: white;
+    font-family: $font;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: ease-in-out 0.2s;
+    &:hover {
+        background: lighten($prime, 10%);
+    }
+}
+
+
+
+
+// FOOTER
 footer {
     width: 100vw;
     background: $grey;
