--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -596,12 +596,14 @@ main {
   background: #197bbd;
   color: white;
   padding: 5px;
+  margin-top: 5px;
   text-align: center;
   font-size: 10pt;
   font-family: 'Montserrat', sans-serif;
   width: 8rem;
   border-radius: 4px;
   float: right;
+  text-decoration: none;
 }
 
 .cruises {
