--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -590,7 +590,15 @@ main {
   background: rgba(0, 0, 0, 0.6);
   margin: 0;
 }
-
+.search-results-h1 {
+  width: 100%;
+  font-family: 'Montserrat', sans-serif;
+}
+.search-results-h2 {
+  width: 100%;
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+}
 .read-more {
   display: block;
   background: #197bbd;
