--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -591,11 +591,16 @@ main {
   margin: 0;
 }
 .search-results-h1 {
-  width: 100%;
+  width: 95%;
   font-family: 'Montserrat', sans-serif;
 }
 .search-results-h2 {
-  width: 100%;
+  width: 95%;
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+}
+.search-results-p {
+  width: 95%;
   margin: 0;
   font-family: 'Montserrat', sans-serif;
 }
