--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -423,13 +423,15 @@ header .phone-num {
   height: 25px;
   margin-right: 10px;
 }
-#sm-nav div .search input {
+.search-input {
   width: 170px;
   height: 100%;
   border: none;
 }
 .search-btn {
-  background-image: url('/images/search-icon.png');
+  width: 30px;
+  height: 100%;
+  background: url('/images/search-icon.png');
   background-size: contain;
   background-position: center;
 }
