edited search button

--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -432,8 +432,10 @@ header .phone-num {
   display: block;
   width: 30px;
   height: 100%;
-  background: url('https://wordpress.austinwright.org/wp-content/themes/cruiseTheme/images/search-icon.png')
-    no-repeat scroll 0 0 transparent;
+  background-image: url('https://wordpress.austinwright.org/wp-content/themes/cruiseTheme/images/search-icon.png');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
   color: #000000;
   cursor: pointer;
 }
