--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
@@ -23,6 +23,16 @@
   list-style: none;
   padding-left: 0;
 }
+.sub-menu {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  position: absolute;
+  top: 160px;
+  background: $prime;
+}
+
 .lg-dd-item {
   width: 25%;
   height: 100%;
@@ -74,22 +84,22 @@
   height: 25px;
   display: flex;
   input {
-      width: 170px;
-      height: 100%;
-      border: none;
+    width: 170px;
+    height: 100%;
+    border: none;
   }
   button {
-      width: 30px;
-      height: 25px;
-      border: none;
-      background: lightgrey;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      img {
-          width: 20px;
-          height: 20px;
-      }
+    width: 30px;
+    height: 25px;
+    border: none;
+    background: lightgrey;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    img {
+      width: 20px;
+      height: 20px;
+    }
   }
 }
 
@@ -107,15 +117,10 @@
   align-items: flex-end;
 }
 
-
-
-
 // HOME MAIN
 .blog-teasers {
   grid-template-columns: repeat(3, 1fr);
 }
-
-
 
 // CRUISE MAIN
 .cruises {
@@ -123,7 +128,7 @@
   display: flex;
   flex-direction: column;
   h1 {
-      font-family: $font;
+    font-family: $font;
   }
 }
 .cruise-item {
@@ -132,8 +137,8 @@
   flex-direction: row;
   margin-bottom: 50px;
   img {
-      width: 33%;
-      height: 100%;
+    width: 33%;
+    height: 100%;
   }
 }
 .cruise-item-content {
@@ -142,24 +147,24 @@
   flex-direction: column;
   margin-bottom: 0;
   margin-left: 20px;
-  h2, p, button {
-      font-family: $font;
+  h2,
+  p,
+  button {
+    font-family: $font;
   }
   h2 {
-      margin: 0;
-      margin-top: 0;
+    margin: 0;
+    margin-top: 0;
   }
 }
-.btn-wrap {    
+.btn-wrap {
   width: 100%;
   display: flex;
   justify-content: flex-end;
   button {
-      width: 25%;
+    width: 25%;
   }
 }
-
-
 
 // AGENT MAIN
 .agent {
@@ -167,7 +172,7 @@
   display: flex;
   flex-direction: column;
   h1 {
-      font-family: $font;
+    font-family: $font;
   }
 }
 .agent-content {
@@ -181,19 +186,15 @@
     margin-bottom: 10px;
   }
   p {
-      font-family: $font;
-      clear: left;
+    font-family: $font;
+    clear: left;
   }
 }
-
-
-
 
 // BOOK MAIN
 .book-form {
   width: 50%;
 }
-
 
 // FOOTER
 .footer-info {
