changed styling of sub menu

--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
@@ -26,11 +26,12 @@
 .sub-menu {
   width: 100%;
   display: flex;
-  align-items: center;
-  justify-content: flex-start;
+  flex-direction: column;
+  align-items: flex-start;
   position: absolute;
   top: 160px;
   background: $prime;
+  z-index: 1000;
 }
 
 .lg-dd-item {
