added hover styling for sub menu

--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
@@ -23,9 +23,12 @@
   list-style: none;
   padding-left: 0;
 }
-.sub-menu {
-  width: 100%;
+#menu-item-52:hover ul {
   display: flex;
+}
+.sub-menu {
+  width: 200px;
+  display: none;
   flex-direction: column;
   align-items: flex-start;
   position: absolute;
