--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -868,9 +868,13 @@ footer .copyright {
     padding-left: 0;
   }
 
-  .sub-menu {
-    width: 100%;
+  #menu-item-52:hover ul {
     display: flex;
+  }
+
+  .sub-menu {
+    width: 200px;
+    display: none;
     flex-direction: column;
     align-items: flex-start;
     position: absolute;
