sub menu hover styling

--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -868,7 +868,7 @@ footer .copyright {
     padding-left: 0;
   }
 
-  #menu-item-52:hover ul {
+  #menu-item-52:hover .sub-menu {
     display: flex;
   }
 
