--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
@@ -23,7 +23,7 @@
   list-style: none;
   padding-left: 0;
 }
-#menu-item-52:hover ul {
+#menu-item-52:hover .sub-menu {
   display: flex;
 }
 .sub-menu {
