--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -883,14 +883,14 @@ footer .copyright {
     z-index: 1000;
   }
 
-  .lg-dd-item {
+  .menu-item {
     width: 25%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: flex-start;
   }
-  .lg-dd-item a {
+  .menu-item a {
     color: white;
     text-decoration: none;
   }
