added styling to menu main

--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -883,6 +883,10 @@ footer .copyright {
     z-index: 1000;
   }
 
+  .menu-main-menu-container {
+    width: 100%;
+  }
+
   .menu-item {
     width: 25%;
     height: 100%;
