updated text-decoration on sub menu

--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -873,6 +873,7 @@ footer .copyright {
   }
 
   .sub-menu {
+    list-style: none;
     width: 200px;
     display: none;
     flex-direction: column;
