--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
@@ -27,7 +27,7 @@
   display: flex;
 }
 .sub-menu {
-  list-style: none;
+  padding-left: 5px;
   width: 200px;
   display: none;
   flex-direction: column;
