--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -873,7 +873,7 @@ footer .copyright {
   }
 
   .sub-menu {
-    list-style: none;
+    padding-left: 5px;
     width: 200px;
     display: none;
     flex-direction: column;
