--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
@@ -23,21 +23,6 @@
   list-style: none;
   padding-left: 0;
 }
-#menu-item-52:hover .sub-menu {
-  display: flex;
-}
-.sub-menu {
-  list-style: none;
-  padding-left: 10px;
-  width: 200px;
-  display: none;
-  flex-direction: column;
-  align-items: flex-start;
-  position: absolute;
-  top: 160px;
-  background: $prime;
-  z-index: 1000;
-}
 
 .menu-main-menu-container {
   width: 100%;
@@ -54,6 +39,28 @@
     text-decoration: none;
   }
 }
+#menu-item-52:hover .sub-menu {
+  display: flex;
+}
+.sub-menu {
+  list-style: none;
+  padding-left: 0;
+  width: 200px;
+  display: none;
+  flex-direction: column;
+  align-items: flex-start;
+  position: absolute;
+  top: 160px;
+  background: $prime;
+  z-index: 1000;
+}
+.agent-menu-item {
+  width: 100%;
+  height: 30px;
+  border-bottom: solid 1px white;
+  margin-left: 10px;
+}
+
 #sub-menu-nav {
   width: 25%;
   // height: 100%;
