--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
@@ -56,9 +56,13 @@
 }
 .agent-menu-item {
   width: 100%;
-  height: 30px;
+  height: 35px;
   border-bottom: solid 1px white;
-  margin-left: 10px;
+  display: flex;
+  align-items: center;
+  a {
+    margin-left: 10px;
+  }
 }
 
 #sub-menu-nav {
