--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -903,8 +903,12 @@ footer .copyright {
 
   .agent-menu-item {
     width: 100%;
-    height: 30px;
+    height: 35px;
     border-bottom: solid 1px white;
+    display: flex;
+    align-items: center;
+  }
+  .agent-menu-item a {
     margin-left: 10px;
   }
 
