--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
@@ -60,6 +60,9 @@
   border-bottom: solid 1px white;
   display: flex;
   align-items: center;
+  &:hover {
+    background: darken($prime, 10%);
+  }
   a {
     margin-left: 10px;
   }
