--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
@@ -60,8 +60,9 @@
   border-bottom: solid 1px white;
   display: flex;
   align-items: center;
+  transition: ease-in-out 0.2s;
   &:hover {
-    background: darken($prime, 10%);
+    background: darken($prime, 5%);
   }
   a {
     margin-left: 10px;
