--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
@@ -22,6 +22,8 @@
   justify-content: flex-start;
   list-style: none;
   padding-left: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .menu-main-menu-container {
