--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -866,6 +866,8 @@ footer .copyright {
     justify-content: flex-start;
     list-style: none;
     padding-left: 0;
+    margin: 0;
+    padding: 0;
   }
 
   .menu-main-menu-container {
