--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
@@ -17,6 +17,7 @@
 }
 #lg-dd-menu {
   width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -28,6 +29,7 @@
 
 .menu-main-menu-container {
   width: 100%;
+  height: 100%;
 }
 
 .cruise-menu-item {
