--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
@@ -157,46 +157,8 @@
 
 // CRUISE MAIN
 .cruises {
-  width: 95%;
-  display: flex;
-  flex-direction: column;
-  h1 {
-    font-family: $font;
-  }
-}
-.cruise-item {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 50px;
-  img {
-    width: 33%;
-    height: 100%;
-  }
-}
-.cruise-item-content {
-  width: 66%;
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 0;
-  margin-left: 20px;
-  h2,
-  p,
-  button {
-    font-family: $font;
-  }
-  h2 {
-    margin: 0;
-    margin-top: 0;
-  }
-}
-.btn-wrap {
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  button {
-    width: 25%;
-  }
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
 }
 
 // AGENT MAIN
