--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -258,49 +258,15 @@ main {
 // CRUISES MAIN
 .cruises {
   width: 95%;
-  display: flex;
-  flex-direction: column;
-  h1 {
-    font-family: $font;
-  }
-}
-.cruise-item {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  img {
-    width: 100%;
-    height: auto;
-  }
-}
-.cruise-item-content {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 40px;
-  h2,
-  p,
-  button {
-    font-family: $font;
-  }
-  h2 {
-    margin: 0;
-    margin-top: 10px;
-  }
-}
-.btn-wrap {
-  width: 100%;
-  button {
-    width: 100%;
-    height: 40px;
-    border: none;
-    border-radius: 4px;
-    background: $prime;
-    color: white;
-    cursor: pointer;
-    transition: ease-in-out 0.2s;
-    &:hover {
-      background: lighten($prime, 10%);
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  justify-items: center;
+  figure {
+    width: 90%;
+    figcaption {
+      font-family: $font;
     }
   }
 }
