--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -599,54 +599,17 @@ main {
 
 .cruises {
   width: 95%;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  justify-items: center;
 }
-.cruises h1 {
+.cruises figure {
+  width: 90%;
+}
+.cruises figure figcaption {
   font-family: "Montserrat", sans-serif;
-}
-
-.cruise-item {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-.cruise-item img {
-  width: 100%;
-  height: auto;
-}
-
-.cruise-item-content {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 40px;
-}
-.cruise-item-content h2,
-.cruise-item-content p,
-.cruise-item-content button {
-  font-family: "Montserrat", sans-serif;
-}
-.cruise-item-content h2 {
-  margin: 0;
-  margin-top: 10px;
-}
-
-.btn-wrap {
-  width: 100%;
-}
-.btn-wrap button {
-  width: 100%;
-  height: 40px;
-  border: none;
-  border-radius: 4px;
-  background: #197bbd;
-  color: white;
-  cursor: pointer;
-  transition: ease-in-out 0.2s;
-}
-.btn-wrap button:hover {
-  background: #2797e2;
 }
 
 .agent {
@@ -985,49 +948,8 @@ footer .copyright {
   }
 
   .cruises {
-    width: 95%;
-    display: flex;
-    flex-direction: column;
-  }
-  .cruises h1 {
-    font-family: "Montserrat", sans-serif;
-  }
-
-  .cruise-item {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 50px;
-  }
-  .cruise-item img {
-    width: 33%;
-    height: 100%;
-  }
-
-  .cruise-item-content {
-    width: 66%;
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 0;
-    margin-left: 20px;
-  }
-  .cruise-item-content h2,
-.cruise-item-content p,
-.cruise-item-content button {
-    font-family: "Montserrat", sans-serif;
-  }
-  .cruise-item-content h2 {
-    margin: 0;
-    margin-top: 0;
-  }
-
-  .btn-wrap {
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-  }
-  .btn-wrap button {
-    width: 25%;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
   }
 
   .agent {
@@ -1111,6 +1033,8 @@ footer .copyright {
 
   .cruises {
     width: 100%;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
   }
 
   .agent {
