--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -255,6 +255,22 @@ main {
   margin: 0;
 }
 
+// ABOUT US MAIN
+.about-us {
+  width: 95%;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  justify-items: center;
+  p {
+    font-family: $font;
+    margin: 0;
+    padding-bottom: 20px;
+    border-bottom: 1px solid black;
+  }
+}
+
 // CRUISES MAIN
 .cruises {
   width: 95%;
