added location page with sytyling

--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_large.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_large.scss
@@ -35,6 +35,11 @@ main {
   font-size: 16pt;
 }
 
+// LOCATION MAIN
+.location {
+  width: 100%;
+}
+
 // ABOUT US MAIN
 .about-us {
   width: 100%;
