--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -612,6 +612,36 @@ main {
   border-bottom: 1px solid black;
 }
 
+.location {
+  width: 95%;
+  display: flex;
+  flex-direction: column;
+}
+
+.location-info {
+  margin-bottom: 20px;
+}
+.location-info p,
+.location-info a {
+  font-family: "Montserrat", sans-serif;
+}
+
+.map {
+  position: relative;
+  padding-bottom: 100%;
+  height: 0;
+  width: 100%;
+  overflow: hidden;
+}
+
+.map iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
+}
+
 .cruises {
   width: 95%;
   display: grid;
@@ -985,6 +1015,10 @@ footer .copyright {
     grid-column: 1/-1;
   }
 
+  .map {
+    padding-bottom: 75%;
+  }
+
   .cruises {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
@@ -1067,6 +1101,10 @@ footer .copyright {
 
   .blogH4 {
     font-size: 16pt;
+  }
+
+  .location {
+    width: 100%;
   }
 
   .about-us {
