--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -49,13 +49,13 @@ header {
 
 #sm-nav {
   width: 100%;
+  height: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
   div {
     width: 100%;
-    height: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -132,6 +132,24 @@ header {
     }
   }
 }
+
+#menu-main-menu {
+  list-style: none;
+  padding-left: 0;
+  li {
+    width: 100%;
+    height: 40px;
+    border-bottom: solid 1px white;
+    a {
+      margin-left: 20px;
+      text-decoration: none;
+      color: white;
+      font-size: 14pt;
+      font-family: $font;
+    }
+  }
+}
+
 .search {
   display: flex;
   align-items: center;
