--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -387,6 +387,7 @@ header .phone-num {
 
 #sm-nav {
   width: 100%;
+  height: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -394,7 +395,6 @@ header .phone-num {
 }
 #sm-nav div {
   width: 100%;
-  height: 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -469,6 +469,23 @@ header .phone-num {
   align-items: center;
   justify-content: flex-start;
   padding-left: 40px;
+}
+
+#menu-main-menu {
+  list-style: none;
+  padding-left: 0;
+}
+#menu-main-menu li {
+  width: 100%;
+  height: 40px;
+  border-bottom: solid 1px white;
+}
+#menu-main-menu li a {
+  margin-left: 20px;
+  text-decoration: none;
+  color: white;
+  font-size: 14pt;
+  font-family: "Montserrat", sans-serif;
 }
 
 .search {
