--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -49,13 +49,13 @@ header {
 
 #sm-nav {
   width: 100%;
-  height: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
   div {
     width: 100%;
+    height: 40px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -91,6 +91,7 @@ header {
     border-top: solid 1px white;
     transition: ease-in-out 0.2s;
     background: $prime;
+    z-index: 1000;
     .dd-item {
       width: 100%;
       height: 50px;
@@ -136,10 +137,13 @@ header {
 #menu-main-menu {
   list-style: none;
   padding-left: 0;
+  width: 100%;
   li {
     width: 100%;
-    height: 40px;
+    height: 50px;
     border-bottom: solid 1px white;
+    display: flex;
+    align-items: center;
     a {
       margin-left: 20px;
       text-decoration: none;
