--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -387,7 +387,6 @@ header .phone-num {
 
 #sm-nav {
   width: 100%;
-  height: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -395,6 +394,7 @@ header .phone-num {
 }
 #sm-nav div {
   width: 100%;
+  height: 40px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -430,6 +430,7 @@ header .phone-num {
   border-top: solid 1px white;
   transition: ease-in-out 0.2s;
   background: #197bbd;
+  z-index: 1000;
 }
 #sm-nav #dd-menu .dd-item {
   width: 100%;
@@ -474,11 +475,14 @@ header .phone-num {
 #menu-main-menu {
   list-style: none;
   padding-left: 0;
+  width: 100%;
 }
 #menu-main-menu li {
   width: 100%;
-  height: 40px;
+  height: 50px;
   border-bottom: solid 1px white;
+  display: flex;
+  align-items: center;
 }
 #menu-main-menu li a {
   margin-left: 20px;
