--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -90,6 +90,8 @@ header {
     border-top: solid 1px white;
     transition: ease-in-out 0.2s;
     background: $prime;
+    position: absolute;
+    top: 50px;
     z-index: 1000;
     .dd-item {
       width: 100%;
@@ -133,10 +135,15 @@ header {
   }
 }
 
+.sm-nav-wrap {
+  height: 50px;
+}
+
 #menu-main-menu {
   list-style: none;
   padding-left: 0;
   width: 100%;
+  margin: 0;
   li {
     width: 100%;
     height: 50px;
