--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -159,6 +159,15 @@ header {
     }
   }
 }
+.sub-menu {
+  list-style: none;
+  padding-left: 0;
+  width: 100%;
+  display: none;
+  flex-direction: column;
+  align-items: flex-start;
+  background: $prime;
+}
 
 .search {
   display: flex;
