--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -146,9 +146,10 @@ header {
   margin: 0;
   li {
     width: 100%;
-    height: 50px;
+    padding: 20px 0px 20px 0px;
     border-bottom: solid 1px white;
     display: flex;
+    flex-direction: column;
     align-items: center;
     a {
       margin-left: 20px;
@@ -167,6 +168,20 @@ header {
   flex-direction: column;
   align-items: flex-start;
   background: $prime;
+}
+.agent-menu-item {
+  width: 80%;
+  height: 25px;
+  border-bottom: solid 1px white;
+  display: flex;
+  align-items: center;
+  a {
+    margin-left: 10px;
+    width: 90%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+  }
 }
 
 .search {
