--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -485,9 +485,10 @@ header .phone-num {
 }
 #menu-main-menu li {
   width: 100%;
-  height: 50px;
+  padding: 20px 0px 20px 0px;
   border-bottom: solid 1px white;
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
 #menu-main-menu li a {
@@ -506,6 +507,21 @@ header .phone-num {
   flex-direction: column;
   align-items: flex-start;
   background: #197bbd;
+}
+
+.agent-menu-item {
+  width: 80%;
+  height: 25px;
+  border-bottom: solid 1px white;
+  display: flex;
+  align-items: center;
+}
+.agent-menu-item a {
+  margin-left: 10px;
+  width: 90%;
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .search {
