--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -150,7 +150,7 @@ header {
     border-bottom: solid 1px white;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     a {
       margin-left: 20px;
       text-decoration: none;
@@ -170,8 +170,7 @@ header {
   background: $prime;
 }
 .agent-menu-item {
-  width: 80%;
-  height: 25px;
+  width: 100%;
   border-bottom: solid 1px white;
   display: flex;
   align-items: center;
