--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -489,7 +489,7 @@ header .phone-num {
   border-bottom: solid 1px white;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
 }
 #menu-main-menu li a {
   margin-left: 20px;
@@ -510,8 +510,7 @@ header .phone-num {
 }
 
 .agent-menu-item {
-  width: 80%;
-  height: 25px;
+  width: 100%;
   border-bottom: solid 1px white;
   display: flex;
   align-items: center;
