--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -166,11 +166,12 @@ header {
   width: 100%;
   display: none;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: flex-end;
+
   background: $prime;
 }
 .agent-menu-item {
-  width: 100%;
+  width: 90%;
   border-bottom: solid 1px white;
   display: flex;
   align-items: center;
