--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -505,12 +505,12 @@ header .phone-num {
   width: 100%;
   display: none;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: flex-end;
   background: #197bbd;
 }
 
 .agent-menu-item {
-  width: 100%;
+  width: 90%;
   border-bottom: solid 1px white;
   display: flex;
   align-items: center;
