--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -171,7 +171,7 @@ header {
   background: $prime;
 }
 .agent-menu-item {
-  width: 90%;
+  width: 90% !important;
   border-bottom: solid 1px white;
   display: flex;
   align-items: center;
