adjusted nav links width and size for tablet and desktop size screens

--- a/styles/_large.scss
+++ b/styles/_large.scss
@@ -1,68 +1,69 @@
 @import './variables';
 
 header {
-    width: 75rem;
+  width: 75rem;
 }
 #lg-nav {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .nav-body {
-    width: 75rem;
+  width: 75rem;
 }
 .lg-dd-item {
-    width: 13%;
+  width: 13%;
 }
 #sub-menu-nav {
-    width: 13%;
+  width: 13%;
+}
+.cruise-menu-item {
+  width: 15%;
+  margin-right: 0;
+  a {
+    font-size: 12pt;
+  }
 }
 
 main {
-    width: 75rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 75rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .blog-articles {
-    width: 100%;
+  width: 100%;
 }
 .blog-teasers {
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(1, auto);
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(1, auto);
 }
 .blogH4 {
-    font-size: 16pt;
+  font-size: 16pt;
 }
-
-
 
 // CRUISES MAIN
 .cruises {
-    width: 100%;
+  width: 100%;
 }
-
-
 
 // AGENT MAIN
 .agent {
-    width: 100%;
+  width: 100%;
+}
+.agent-content {
+  img {
+    width: 33%;
   }
-  .agent-content {
-    img {
-      width: 33%;
-    }
-  }
-
-
+}
 
 // BOOK MAIN
 .book {
-    width: 100%;
+  width: 100%;
 }
 
 .footer-info {
-    width: 75rem;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(1, auto);
-  }
+  width: 75rem;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(1, auto);
+}
