--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
@@ -33,14 +33,15 @@
 }
 
 .cruise-menu-item {
-  width: 15%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  margin-right: 20px;
   a {
     color: white;
     text-decoration: none;
+    font-size: 11pt;
   }
 }
 #menu-item-52:hover .sub-menu {
