adjusted nav links

--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_large.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_large.scss
@@ -17,6 +17,13 @@ header {
 #sub-menu-nav {
   width: 13%;
 }
+.cruise-menu-item {
+  width: 15%;
+  margin-right: 0;
+  a {
+    font-size: 12pt;
+  }
+}
 
 main {
   width: 75rem;
