adjusted nav links

--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -1137,8 +1137,7 @@ footer .copyright {
   }
 
   .cruise-menu-item {
-    width: 10%;
-    margin-right: 0;
+    margin-right: 30px;
   }
 
   main {
