changed the slider on mobile

--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
@@ -141,9 +141,9 @@
   display: none;
 }
 
-.hero-sm {
-  display: none;
-}
+// .hero-sm {
+//   display: none;
+// }
 .hero-lg {
   width: 100%;
   position: relative;
